# zeplytest

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  examples.http  pyproject.toml
src/: .env.defaults  manage.py
src/apps/addresses/: backend.py  models.py  serializers.py  urls.py  views.py
src/apps/addresses/migrations/: 0001_initial.py
src/apps/networks/: adapter.py  base.py  btc.py  eth.py  types.py  xrpl.py
src/apps/wallets/: admin.py  backend.py  models.py  serializers.py  urls.py  views.py
src/apps/wallets/migrations/: 0001_initial.py
src/tests/apps/address/: factories.py  test_backend.py  test_serializers.py
src/tests/apps/wallets/: factories.py  test_serializers.py
src/zeplytest/: asgi.py  settings.py  urls.py  wsgi.py
