[tool.poetry]
name = "zeply-test"
version = "0.1.0"
description = ""
authors = ["Eugene Savchenko <savchenko.eo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.1.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
